[gd_scene load_steps=5 format=3 uid="uid://bm0nrfce0f2uu"]

[ext_resource type="Script" uid="uid://bq08ghl86tvnw" path="res://scenes/ui/deck_pile_view.gd" id="1_51vc7"]
[ext_resource type="PackedScene" uid="uid://dvwwlm2ng1you" path="res://scenes/ui/pkmn_card_displayer.tscn" id="2_xjqhe"]
[ext_resource type="PackedScene" uid="uid://cmndbgancqt71" path="res://scenes/ui/card_detail_overlay.tscn" id="3_pmttm"]

[sub_resource type="LabelSettings" id="LabelSettings_vv6o7"]
font_size = 24

[node name="DeckPileView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51vc7")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.635294)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Discard Pile"
label_settings = SubResource("LabelSettings_vv6o7")
horizontal_alignment = 1

[node name="DisplayContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="PkmnCardDisplayer" parent="MarginContainer/VBoxContainer/DisplayContainer" instance=ExtResource("2_xjqhe")]
layout_mode = 2

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = 32.0
grow_horizontal = 0
text = "Back"

[node name="CardDetailOverlay" parent="." instance=ExtResource("3_pmttm")]
unique_name_in_owner = true
visible = false
layout_mode = 1
